2013-09-21  Jesse Kornblum  <research@jessekornblum.com>:

	* src/dig.cpp: Fixed issue 301 re: removing double dots from path
	* Makefile.am: Removed sha3deep target

2013-07-09  Jesse Kornblum  <research@jessekornblum.com>:

	* hashlist.cpp: Fixes problem with known files with commas in filename.

2013-05-07  Jesse Kornblum  <research@jessekornblum.com>:

	* configure.ac: Added patch from dago to check for MAP_FILE

2012-11-29  Jesse Kornblum  <research@jessekornblum.com>:

	* src/dig.cpp: Experimental change to parse single instance storage (SIS) junction points.

2012-11-12  Jesse Kornblum  <research@jessekornblum.com>:

	* src/hashlist.cpp: Added experimental mode for case insensitive matching. Also changes in main.cpp, main.h, and display.cpp

2012-11-10  Jesse Kornblum  <research@jessekornblum.com>:

	* src/Makefile.am: Added sha3deep
	* src/main.h: Added SHA3 defines
	* src/main.cpp: Added SHA3 code
	* src/common.h: Increased max size of context structure for SHA-3

2012-11-09  Jesse Kornblum  <research@jessekornblum.com>:

	* man/hashdeep.1: Clarified Unicode statements

2012-10-30  Jesse Kornblum  <research@jessekornblum.com>:

	* main.cpp: Converting break statements which fall through to consistent style.
	* main.cpp: Added checks in hashdeep against user errors on command line
	* dig.cpp: Adding specific message regarding SIS reparse points.
	* blake: Removed code which won't be used

2012-10-22  Jesse Kornblum  <research@jessekornblum.com>:

	* configure.ac: Uncommented check for big endian systems.

2012-10-12  Jesse Kornblum  <research@jessekornblum.com>:

	* src/threadpool.cpp: Renamed ERR function to avoid conflicts on SunOS and derivates.

2012-09-12  Jesse Kornblum  <research@jessekornblum.com>:

	* man/md5deep.1, hashdeep.1: Typos

2012-07-05  Jesse Kornblum  <research@jessekornblum.com>:

	* man/md5deep.1: Clarified quiet mode, -q.
	* configure.ac: Version bump to 4.3

2012-06-29  Simson Garfinkel  <simsong@imac3.local>
